--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.10.2"
+    "mysql2": "^3.10.2",
+    "stripe": "^16.2.0"
   }
 }
