--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "author": "PrimeCode",
     "license": "ISC",
     "devDependencies": {
-        "eslint": "^8.57.0",
+        "@eslint/js": "^9.11.0",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.9.0",
         "nodemon": "^3.1.4",
         "prettier": "^3.3.3"
     },
