--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "console-stamp": "^3.1.2",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "express": "^4.19.2",
         "google-auth-library": "^9.11.0",
         "jsonwebtoken": "^9.0.2",
