--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "google-auth-library": "^9.11.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.10.2",
+        "nodemailer": "^6.9.16",
         "stripe": "^16.2.0"
     }
 }
