--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node --env-file=.env index.js",
-        "dev": "nodemon --env-file=.env index.js",
+        "start": "node index.js",
+        "dev": "nodemon index.js",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
@@ -27,6 +27,7 @@
         "console-stamp": "^3.1.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.19.2",
         "google-auth-library": "^9.11.0",
         "jsonwebtoken": "^9.0.2",
