--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "dotenv": "^16.4.7",
         "express": "^4.19.2",
         "google-auth-library": "^9.11.0",
+        "google-recaptcha": "^1.1.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.10.2",
         "nodemailer": "^6.9.16",
