--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.10.2",
         "nodemailer": "^6.9.16",
-        "stripe": "^16.2.0"
+        "stripe": "^16.2.0",
+        "twilio": "^5.4.0"
     }
 }
