--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,17 @@
                 "SwitchCase": 1
             }
         ],
-        "linebreak-style": ["error", "unix"],
-        "quotes": ["error", "double"],
-        "semi": ["error", "always"]
+        "linebreak-style": [
+            "error",
+            "unix"
+        ],
+        "quotes": [
+            "error",
+            "double"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
     }
 }
