--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
-        "lint:fix": "eslint --fix ."
+        "lint": "eslint --fix ."
     },
     "keywords": [],
     "author": "PrimeCode",
     "license": "ISC",
     "devDependencies": {
-        "@eslint/js": "^9.11.0",
+        "@eslint/js": "^9.25.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
-        "globals": "^15.9.0",
+        "eslint-plugin-prettier": "^5.2.6",
+        "globals": "^15.15.0",
         "nodemon": "^3.1.4",
-        "prettier": "^3.3.3"
+        "prettier": "^3.5.3"
     },
     "dependencies": {
         "console-stamp": "^3.1.2",
